test/scc/decl/semantic-errors/072.a
072.t:3:16: error: field 'a' declared with storage specifier